@@ -103,7 +103,7 @@
     </snapshotRepository>
   </distributionManagement>
   <properties>
-    <revision>1.3.2-SNAPSHOT</revision>
+    <revision>1.1.11-wedatasphere</revision>
     <jedis.version>2.9.2</jedis.version>
     <spark.version>2.4.3</spark.version>
     <hadoop.version>2.7.2</hadoop.version>
@@ -998,7 +998,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -1407,9 +1407,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <argLine>--add-opens java.base/java.util=ALL-UNNAMED
-                --add-opens java.base/java.nio=ALL-UNNAMED
-                --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+              <!--              <argLine>&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+              <!--                &#45;&#45;add-opens java.base/java.nio=ALL-UNNAMED-->
+              <!--                &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>-->
             </configuration>
           </plugin>
         </plugins>
